# Smallest-Circle

./: .gitignore  CMakeLists.txt  README.md
include/SmallestCircle/: common.h  smallest_circle.h
src/: common.cpp  smallest_circle.cpp  smallest_circle_test.cpp  smallest_circle_visualization.py
